@@ -5,14 +5,14 @@ import java.io.IOException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import de.azrael.enums.Directory;
 import de.azrael.enums.Translation;
-import de.azrael.fileManagement.FileSetting;
-import de.azrael.fileManagement.IniFileReader;
 import de.azrael.sql.Azrael;
+import de.azrael.util.FileHandler;
 import de.azrael.util.STATIC;
 import net.dv8tion.jda.api.JDA;
-import net.dv8tion.jda.api.entities.TextChannel;
-import net.dv8tion.jda.api.events.ShutdownEvent;
+import net.dv8tion.jda.api.entities.channel.concrete.TextChannel;
+import net.dv8tion.jda.api.events.session.ShutdownEvent;
 import net.dv8tion.jda.api.hooks.ListenerAdapter;
 
 /**
@@ -33,25 +33,28 @@ public class ShutdownListener extends ListenerAdapter {
 	
 	@Override
 	public void onShutdown(ShutdownEvent e) {
-		//retrieve the file with the bot state (e.g. running / not running)
-		String filecontent = FileSetting.readFile(IniFileReader.getTempDirectory()+STATIC.getSessionName()+"running.azr");
+		final String sessionName = System.getProperty("SESSION_NAME");
+		final String fileName = sessionName+"running.azr";
+		final String pid = ""+ProcessHandle.current().pid();
 		
-		//execute if the bot is labeled as running
-		if(filecontent.contains("1")) {
-			FileSetting.createFile(IniFileReader.getTempDirectory()+STATIC.getSessionName()+"running.azr", "0");
+		//retrieve the file with the bot pid value
+		String fileContent = FileHandler.readFile(Directory.TEMP, fileName);
+		
+		//execute if the retrieved pid is the same as of current pid
+		if(!fileContent.isBlank() && fileContent.contains(""+pid)) {
+			FileHandler.deleteFile(Directory.TEMP, fileName);
 			try {
 				Process proc;
 				//execute command to restart the bot
-				proc = Runtime.getRuntime().exec((IniFileReader.getLinuxScreen() ? "screen -dm "+(STATIC.getSessionName().length() > 0 ? "-S "+STATIC.getSessionName()+" " : "") : "")+"java -jar --enable-preview Azrael.jar "+compileParameters());
+				proc = Runtime.getRuntime().exec("screen -dm -S "+sessionName+" java -Dtwitter4j.loggerFactory=twitter4j.NullLoggerFactory -jar Azrael.jar "+compileParameters());
 				proc.waitFor();
 			} catch (IOException | InterruptedException e1) {
-				logger.error("Bot couldn't be restarted!");
+				logger.error("Bot couldn't be restarted!", e1);
 			}
 		}
 		
 		//check if a duplicate session has been started and terminate the current session, if it occurred
-		if(filecontent.contains("2")) {
-			FileSetting.createFile(IniFileReader.getTempDirectory()+STATIC.getSessionName()+"running.azr", "1");
+		if(!fileContent.isBlank() && !fileContent.contains(""+pid)) {
 			logger.warn("Duplicate running session shut down!");
 			Azrael.SQLInsertActionLog("DUPLICATE_SESSION", e.getJDA().getSelfUser().getIdLong(), 0, "Shutdown");
 		}
@@ -65,29 +68,16 @@ public class ShutdownListener extends ListenerAdapter {
 	
 	private static String compileParameters() {
 		StringBuilder params = new StringBuilder();
-		params.append(STATIC.getToken());
-		if(STATIC.getSessionName().length() > 0)
-			params.append(" sessionname:"+STATIC.getSessionName());
-		if(STATIC.getAdmin() > 0)
-			params.append(" admin:"+STATIC.getAdmin());
-		if(STATIC.getTimezone().length() > 0)
-			params.append(" timezone:"+STATIC.getTimezone());
-		if(STATIC.getActionLog().length() > 0)
-			params.append(" actionlog:"+STATIC.getActionLog());
-		if(STATIC.getDoubleExperience().length() > 0)
-			params.append(" doubleexperience:"+STATIC.getDoubleExperience());
-		if(STATIC.getDoubleExperienceStart().length() > 0)
-			params.append(" doubleexperiencestart:"+STATIC.getDoubleExperienceStart());
-		if(STATIC.getDoubleExperienceEnd().length() > 0)
-			params.append(" doubleexperienceend:"+STATIC.getDoubleExperienceEnd());
-		if(STATIC.getCountMembers().length() > 0)
-			params.append(" countmembers:"+STATIC.getCountMembers());
-		if(STATIC.getFileLogger().length() > 0)
-			params.append(" filelogger:"+STATIC.getFileLogger());
-		if(STATIC.getGameMessage().length() > 0)
-			params.append(" gamemessage:"+STATIC.getGameMessage());
-		if(STATIC.getTemp().length() > 0)
-			params.append(" temp:"+STATIC.getTemp());
+		params.append(System.getProperty("TOKEN"));
+		params.append(" sessionname:"+System.getProperty("SESSION_NAME"));
+		params.append(" encryption:"+System.getProperty("AES_SECRET"));
+		params.append(" actionlog:"+System.getProperty("ACTION_LOG"));
+		params.append(" countguilds:"+System.getProperty("COUNT_GUILDS"));
+		params.append(" statusmessage:"+System.getProperty("STATUS_MESSAGE"));
+		params.append(" homepage:"+System.getProperty("HOMEPAGE"));
+		params.append(" port:"+System.getProperty("WEBSERVER_PORT"));
+		params.append(" temp:"+Directory.TEMP.getPath());
+		params.append(" spreadsheetdelay:"+System.getProperty("SPREADSHEET_UPDATE_DELAY"));
 		
 		return params.toString();
 	}
